# FourierFx

./: .gitignore  README
cfg/: pip.requirements.txt
src/dashboard/: manage.py  settings.py  urls.py
src/dashboard/core/: views.py
src/dashboard/static_files/js/: amstock.js
src/dashboard/templates/: base.html
src/dashboard/templates/core/: index.html
src/hs/: LICENSE  fourierfx.cabal
src/hs/FourierFx/: FourierFx.hs  Main.hs  Storage.hs  Utils.hs
src/hs/quotes/: QuotePublisher.hs  QuoteSubscriber.hs  cabal-install.sh  cabal.requirements.txt
src/py/dashboard/: settings.py  urls.py
src/py/dashboard/api/: resources.py  urls.py  views.py
src/py/dashboard/core/: urls.py
src/py/dashboard/templates/: base.html
src/py/quotes/: publisher.py  settings.py
src/py/quotes/trendanalyzer/: bands.py
src/py/quotes/utils/: redisdb.py  unicodecsv.py
src/quotes/: QuotePublisher.hs  QuoteServer.hs  QuoteSubscriber.hs  cabal.requirements.txt  make.sh
src/quotespy/: __main__.py  publisher.py
src/quotespy/trendanalyzer/: __init__.py
src/quotespy/utils/: zeromq.py
